src/objects/Gsettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Storing some settings for the consult calendar backup process</description>
    <fields>
        <fullName>Last_Offset__c</fullName>
        <label>Last Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBox__c</fullName>
        <label>MBox</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLog__c</fullName>
        <label>MLog</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Google Settings</label>
</CustomObject>